[package]
name = "tikv-client"
version = "0.0.0"
keywords = ["TiKV", "KV", "distributed-systems"]
license = "Apache-2.0"
authors = ["The TiKV Project Authors"]
repository = "https://github.com/tikv/client-rust"
description = "The rust language implementation of TiKV client."
edition = "2018"

[features]
default = []
# Enable integration tests with a running TiKV and PD instance.
# Use $PD_ADDRS, comma separated, to set the addresses the tests use. 
integration-tests = []

[lib]
name = "tikv_client"

[dependencies]
derive-new = "0.5"
failure = "0.1"
futures = { version = "0.3.1", features = ["compat", "async-await", "thread-pool"] }
grpcio = { version = "0.5.0", features = [ "secure", "prost-codec" ], default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git", features = [ "prost-codec" ], default-features = false }
lazy_static = "1"
log = "0.4"
rand = "0.7"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
futures-timer = "3.0"

[dependencies.prometheus]
version = "0.8"
default-features = false
features = ["push", "process"]

[dev-dependencies]
clap = "2.32"
tempdir = "0.3"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
proptest = "0.9"
proptest-derive = "0.1.0"
fail = { version = "0.3", features = [ "failpoints" ] }

[patch.crates-io]
protobuf = { git = "https://github.com/nrc/rust-protobuf", rev="4df576feca3b10c01d55b0e7c634bfab30982087", version="2.8.0"}
protobuf-build = { git = "https://github.com/tikv/protobuf-build", rev="42e52b9311f7fb31bbbe089fef5a24ec0392f9ce", version="0.10.0" }
raft-proto = { git = "https://github.com/tikv/raft-rs", rev = "e624c1d48460940a40d8aa69b5329460d9af87dd", version="0.6.0-alpha", default-features = false}
